tests/new_merge_unsupported/new_merge_unsupported.exp
Error ---------------------------------------------------------------------------------- ops_on_eval_conditional.js:5:25

Cannot use class extends on conditional type [1] in an export position. Please provide an (alternative) annotation for
class extends [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:5:25
   5| export class x1 extends ((0: any): T) {}
                              ^^^^^^^^^^^^^ [2]

References:
   ops_on_eval_conditional.js:1:10
   1| type T = void extends void ? any : empty;
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------- ops_on_eval_conditional.js:8:19

Cannot use property `f` on conditional type [1] in an export position. Please provide an (alternative) annotation for
property `f` [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:8:19
   8| export const x2 = t.f;
                        ^^^ [2]

References:
   ops_on_eval_conditional.js:1:10
   1| type T = void extends void ? any : empty;
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_conditional.js:11:19

Cannot use computed property on conditional type [1] in an export position. Please provide an (alternative) annotation
for computed property [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:11:19
   11| export const x3 = t[('': string)];
                         ^^^^^^^^^^^^^^^ [2]

References:
   ops_on_eval_conditional.js:1:10
    1| type T = void extends void ? any : empty;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_conditional.js:14:19

Cannot use spread on conditional type [1] in an export position. Please provide an (alternative) annotation for
spread [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:14:19
   14| export const x4 = { ...t };
                         ^^^^^^^^ [2]

References:
   ops_on_eval_conditional.js:1:10
    1| type T = void extends void ? any : empty;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_conditional.js:17:17

Cannot use exact on conditional type [1] in an export position. Please provide an (alternative) annotation for
exact [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:17:17
   17| declare var y5: $Exact<T>;
                       ^^^^^^^^^ [2]

References:
   ops_on_eval_conditional.js:1:10
    1| type T = void extends void ? any : empty;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_conditional.js:21:17

Cannot use statics on conditional type [1] in an export position. Please provide an (alternative) annotation for
statics [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:21:17
   21| declare var y6: Class<T>;
                       ^^^^^^^^ [2]

References:
   ops_on_eval_conditional.js:1:10
    1| type T = void extends void ? any : empty;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_conditional.js:27:19

Cannot use property `f` on conditional type [1] in an export position. Please provide an (alternative) annotation for
property `f` [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:27:19
   27| export const x7 = y7.f;
                         ^^^^ [2]

References:
   ops_on_eval_conditional.js:1:10
    1| type T = void extends void ? any : empty;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_conditional.js:30:37

Cannot use prototype on conditional type [1] in an export position. Please provide an (alternative) annotation for
prototype [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:30:37
   30| declare export var x8: { __proto__: T };
                                           ^ [2]

References:
   ops_on_eval_conditional.js:1:10
    1| type T = void extends void ? any : empty;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_conditional.js:33:32

Cannot use mixins on conditional type [1] in an export position. Please provide an (alternative) annotation for
mixins [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:33:32
   33| declare export class x9 mixins t {}
                                      ^ [2]

References:
   ops_on_eval_conditional.js:1:10
    1| type T = void extends void ? any : empty;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_conditional.js:36:20

Cannot use unary minus on conditional type [1] in an export position. Please provide an (alternative) annotation for
unary minus [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:36:20
   36| export const x10 = -t;
                          ^^ [2]

References:
   ops_on_eval_conditional.js:1:10
    1| type T = void extends void ? any : empty;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_conditional.js:39:20

Cannot use unary not on conditional type [1] in an export position. Please provide an (alternative) annotation for unary
not [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:39:20
   39| export const x11 = !t;
                          ^^ [2]

References:
   ops_on_eval_conditional.js:1:10
    1| type T = void extends void ? any : empty;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_conditional.js:42:18

Cannot use `$KeyMirror` on conditional type [1] in an export position. Please provide an (alternative) annotation for
`$KeyMirror` [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:42:18
   42| declare var y12: $KeyMirror<T>;
                        ^^^^^^^^^^^^^ [2]

References:
   ops_on_eval_conditional.js:1:10
    1| type T = void extends void ? any : empty;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_conditional.js:46:18

Cannot use key set on conditional type [1] in an export position. Please provide an (alternative) annotation for key
set [2]. [invalid-exported-annotation]

   ops_on_eval_conditional.js:46:18
   46| declare var y13: $Keys<T>;
                        ^^^^^^^^ [2]

References:
   ops_on_eval_conditional.js:1:10
    1| type T = void extends void ? any : empty;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------- ops_on_eval_mapped_type.js:5:19

Cannot use property `f` on object type [1] in an export position. Please provide an (alternative) annotation for
property `f` [2]. [invalid-exported-annotation]

   ops_on_eval_mapped_type.js:5:19
   5| export const x2 = t.f;
                        ^^^ [2]

References:
   ops_on_eval_mapped_type.js:1:11
   1| type T = {[_K in keyof { f: number }]: string};
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------- ops_on_eval_mapped_type.js:8:19

Cannot use computed property on object type [1] in an export position. Please provide an (alternative) annotation for
computed property [2]. [invalid-exported-annotation]

   ops_on_eval_mapped_type.js:8:19
   8| export const x3 = t[('': string)]; // error: unsafe string key access
                        ^^^^^^^^^^^^^^^ [2]

References:
   ops_on_eval_mapped_type.js:1:11
   1| type T = {[_K in keyof { f: number }]: string};
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------- ops_on_eval_mapped_type.js:8:26

Cannot access object with computed property using string [1]. [invalid-computed-prop]

   8| export const x3 = t[('': string)]; // error: unsafe string key access
                               ^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_mapped_type.js:11:19

Cannot use spread on object type [1] in an export position. Please provide an (alternative) annotation for spread [2].
[invalid-exported-annotation]

   ops_on_eval_mapped_type.js:11:19
   11| export const x4 = { ...t };
                         ^^^^^^^^ [2]

References:
   ops_on_eval_mapped_type.js:1:11
    1| type T = {[_K in keyof { f: number }]: string};
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_mapped_type.js:14:17

Cannot use exact on object type [1] in an export position. Please provide an (alternative) annotation for exact [2].
[invalid-exported-annotation]

   ops_on_eval_mapped_type.js:14:17
   14| declare var y5: $Exact<T>;
                       ^^^^^^^^^ [2]

References:
   ops_on_eval_mapped_type.js:1:11
    1| type T = {[_K in keyof { f: number }]: string};
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_mapped_type.js:18:37

Cannot use prototype on object type [1] in an export position. Please provide an (alternative) annotation for
prototype [2]. [invalid-exported-annotation]

   ops_on_eval_mapped_type.js:18:37
   18| declare export var x8: { __proto__: T };
                                           ^ [2]

References:
   ops_on_eval_mapped_type.js:1:11
    1| type T = {[_K in keyof { f: number }]: string};
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_mapped_type.js:21:20

Cannot use unary not on object type [1] in an export position. Please provide an (alternative) annotation for unary
not [2]. [invalid-exported-annotation]

   ops_on_eval_mapped_type.js:21:20
   21| export const x11 = !t;
                          ^^ [2]

References:
   ops_on_eval_mapped_type.js:1:11
    1| type T = {[_K in keyof { f: number }]: string};
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_mapped_type.js:24:18

Cannot use `$KeyMirror` on object type [1] in an export position. Please provide an (alternative) annotation for
`$KeyMirror` [2]. [invalid-exported-annotation]

   ops_on_eval_mapped_type.js:24:18
   24| declare var y12: $KeyMirror<T>;
                        ^^^^^^^^^^^^^ [2]

References:
   ops_on_eval_mapped_type.js:1:11
    1| type T = {[_K in keyof { f: number }]: string};
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- ops_on_eval_mapped_type.js:28:18

Cannot use key set on object type [1] in an export position. Please provide an (alternative) annotation for key set [2].
[invalid-exported-annotation]

   ops_on_eval_mapped_type.js:28:18
   28| declare var y13: $Keys<T>;
                        ^^^^^^^^ [2]

References:
   ops_on_eval_mapped_type.js:1:11
    1| type T = {[_K in keyof { f: number }]: string};
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ ops_on_inst_rest.js:3:8

Cannot use rest on `C` [1] in an export position. Please provide an (alternative) annotation for rest [2].
[invalid-exported-annotation]

   ops_on_inst_rest.js:3:8
   3| const {...rest_c} = c;
             ^^^^^^^^^ [2]

References:
   ops_on_inst_rest.js:1:15
   1| declare class C { f: number }
                    ^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:11:25

Cannot use class extends on intersection type [1] in an export position. Please provide an (alternative) annotation for
class extends [2]. [invalid-exported-annotation]

   ops_on_intersection.js:11:25
   11| export class x1 extends ((0: any): T) {}
                               ^^^^^^^^^^^^^ [2]

References:
   ops_on_intersection.js:4:10
    4| type T = typeof C & typeof D;
                ^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:14:19

Cannot use property `f` on intersection type [1] in an export position. Please provide an (alternative) annotation for
property `f` [2]. [invalid-exported-annotation]

   ops_on_intersection.js:14:19
   14| export const x2 = t.f;
                         ^^^ [2]

References:
   ops_on_intersection.js:4:10
    4| type T = typeof C & typeof D;
                ^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:17:19

Cannot get `t['']` because Cannot access object with computed property using string [1]. [incompatible-use]

   ops_on_intersection.js:17:19
   17| export const x3 = t[('': string)];
                         ^^^^^^^^^^^^^^^

References:
   ops_on_intersection.js:17:26
   17| export const x3 = t[('': string)];
                                ^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:17:19

Cannot use computed property on intersection type [1] in an export position. Please provide an (alternative) annotation
for computed property [2]. [invalid-exported-annotation]

   ops_on_intersection.js:17:19
   17| export const x3 = t[('': string)];
                         ^^^^^^^^^^^^^^^ [2]

References:
   ops_on_intersection.js:4:10
    4| type T = typeof C & typeof D;
                ^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:23:17

Cannot use statics on intersection type [1] in an export position. Please provide an (alternative) annotation for
statics [2]. [invalid-exported-annotation]

   ops_on_intersection.js:23:17
   23| declare var y6: Class<C & D>;
                       ^^^^^^^^^^^^ [2]

References:
   ops_on_intersection.js:23:23
   23| declare var y6: Class<C & D>;
                             ^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:27:25

Cannot use class extends on intersection type [1] in an export position. Please provide an (alternative) annotation for
class extends [2]. [invalid-exported-annotation]

   ops_on_intersection.js:27:25
   27| export class c7 extends ((0: any): T) {}
                               ^^^^^^^^^^^^^ [2]

References:
   ops_on_intersection.js:4:10
    4| type T = typeof C & typeof D;
                ^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:32:37

Cannot use prototype on intersection type [1] in an export position. Please provide an (alternative) annotation for
prototype [2]. [invalid-exported-annotation]

   ops_on_intersection.js:32:37
   32| declare export var x8: { __proto__: T };
                                           ^ [2]

References:
   ops_on_intersection.js:4:10
    4| type T = typeof C & typeof D;
                ^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:35:32

Cannot use mixins on intersection type [1] in an export position. Please provide an (alternative) annotation for
mixins [2]. [invalid-exported-annotation]

   ops_on_intersection.js:35:32
   35| declare export class x9 mixins t {}
                                      ^ [2]

References:
   ops_on_intersection.js:4:10
    4| type T = typeof C & typeof D;
                ^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:38:20

Cannot use unary minus on intersection type [1] in an export position. Please provide an (alternative) annotation for
unary minus [2]. [invalid-exported-annotation]

   ops_on_intersection.js:38:20
   38| export const x10 = -n;
                          ^^ [2]

References:
   ops_on_intersection.js:8:16
    8| declare var n: number & mixed;
                      ^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:41:20

Cannot use unary not on intersection type [1] in an export position. Please provide an (alternative) annotation for
unary not [2]. [invalid-exported-annotation]

   ops_on_intersection.js:41:20
   41| export const x11 = !n;
                          ^^ [2]

References:
   ops_on_intersection.js:8:16
    8| declare var n: number & mixed;
                      ^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:44:18

Cannot use `$KeyMirror` on intersection type [1] in an export position. Please provide an (alternative) annotation for
`$KeyMirror` [2]. [invalid-exported-annotation]

   ops_on_intersection.js:44:18
   44| declare var y12: $KeyMirror<S>;
                        ^^^^^^^^^^^^^ [2]

References:
   ops_on_intersection.js:5:10
    5| type S = { f: any } & { g: any };
                ^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_intersection.js:48:18

Cannot use key set on intersection type [1] in an export position. Please provide an (alternative) annotation for key
set [2]. [invalid-exported-annotation]

   ops_on_intersection.js:48:18
   48| declare var y13: $Keys<T>;
                        ^^^^^^^^ [2]

References:
   ops_on_intersection.js:4:10
    4| type T = typeof C & typeof D;
                ^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:10:25

Cannot use class extends on config of React component [1] in an export position. Please provide an (alternative)
annotation for class extends [2]. [invalid-exported-annotation]

   ops_on_react_config.js:10:25
    10| export class x1 extends ((0: any): T) {}
                                ^^^^^^^^^^^^^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:10:36

Cannot extend `x1` [1] with `T` because `Props` [2] is not inheritable. [incompatible-use]

   ops_on_react_config.js:10:36
   10| export class x1 extends ((0: any): T) {}
                                          ^ [2]

References:
   ops_on_react_config.js:10:14
   10| export class x1 extends ((0: any): T) {}
                    ^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:13:19

Cannot use property `f` on config of React component [1] in an export position. Please provide an (alternative)
annotation for property `f` [2]. [invalid-exported-annotation]

   ops_on_react_config.js:13:19
    13| export const x2 = t.f;
                          ^^^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:16:19

Cannot use computed property on config of React component [1] in an export position. Please provide an (alternative)
annotation for computed property [2]. [invalid-exported-annotation]

   ops_on_react_config.js:16:19
    16| export const x3 = t[('': string)];
                          ^^^^^^^^^^^^^^^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:16:26

Cannot access object with computed property using string [1]. [invalid-computed-prop]

   16| export const x3 = t[('': string)];
                                ^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:19:19

Cannot use spread on config of React component [1] in an export position. Please provide an (alternative) annotation for
spread [2]. [invalid-exported-annotation]

   ops_on_react_config.js:19:19
    19| export const x4 = { ...t };
                          ^^^^^^^^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:22:17

Cannot use exact on config of React component [1] in an export position. Please provide an (alternative) annotation for
exact [2]. [invalid-exported-annotation]

   ops_on_react_config.js:22:17
    22| declare var y5: $Exact<T>;
                        ^^^^^^^^^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:26:17

Cannot use statics on config of React component [1] in an export position. Please provide an (alternative) annotation
for statics [2]. [invalid-exported-annotation]

   ops_on_react_config.js:26:17
    26| declare var y6: Class<T>;
                        ^^^^^^^^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:27:19

`Props` [1] is not an instance type. [incompatible-use]

   ops_on_react_config.js:27:19
   27| export const x6 = y6.f;
                         ^^

References:
   ops_on_react_config.js:26:23
   26| declare var y6: Class<T>;
                             ^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:30:14

Cannot extend statics of `T` [1] with `c7` because `Props` [1] is not inheritable. [incompatible-use]

   ops_on_react_config.js:30:14
   30| export class c7 extends ((0: any): Class<T>) {}
                    ^^

References:
   ops_on_react_config.js:30:25
   30| export class c7 extends ((0: any): Class<T>) {}
                               ^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:32:19

Cannot use property `f` on config of React component [1] in an export position. Please provide an (alternative)
annotation for property `f` [2]. [invalid-exported-annotation]

   ops_on_react_config.js:32:19
    32| export const x7 = y7.f;
                          ^^^^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:35:37

Cannot use prototype on config of React component [1] in an export position. Please provide an (alternative) annotation
for prototype [2]. [invalid-exported-annotation]

   ops_on_react_config.js:35:37
    35| declare export var x8: { __proto__: T };
                                            ^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:38:32

Cannot use mixins on config of React component [1] in an export position. Please provide an (alternative) annotation for
mixins [2]. [invalid-exported-annotation]

   ops_on_react_config.js:38:32
    38| declare export class x9 mixins t {}
                                       ^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:38:32

`Props` [1] is not a class. [not-a-class]

   ops_on_react_config.js:38:32
   38| declare export class x9 mixins t {}
                                      ^

References:
   ops_on_react_config.js:7:16
    7| declare var t: T;
                      ^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:41:20

Cannot use unary minus on config of React component [1] in an export position. Please provide an (alternative)
annotation for unary minus [2]. [invalid-exported-annotation]

   ops_on_react_config.js:41:20
    41| export const x10 = -t;
                           ^^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:41:21

Cannot perform arithmetic operation because `Props` [1] is not a number or bigint. [unsafe-arithmetic]

   ops_on_react_config.js:41:21
   41| export const x10 = -t;
                           ^

References:
   ops_on_react_config.js:7:16
    7| declare var t: T;
                      ^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:44:20

Cannot use unary not on config of React component [1] in an export position. Please provide an (alternative) annotation
for unary not [2]. [invalid-exported-annotation]

   ops_on_react_config.js:44:20
    44| export const x11 = !t;
                           ^^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:47:18

Cannot use `$KeyMirror` on config of React component [1] in an export position. Please provide an (alternative)
annotation for `$KeyMirror` [2]. [invalid-exported-annotation]

   ops_on_react_config.js:47:18
    47| declare var y12: $KeyMirror<T>;
                         ^^^^^^^^^^^^^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------- ops_on_react_config.js:51:18

Cannot use key set on config of React component [1] in an export position. Please provide an (alternative) annotation
for key set [2]. [invalid-exported-annotation]

   ops_on_react_config.js:51:18
    51| declare var y13: $Keys<T>;
                         ^^^^^^^^ [2]

References:
   <BUILTINS>/react.js:403:53
   403|   declare export type Config<Props, DefaultProps> = React$Config<Props, DefaultProps>;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]



Found 54 errors
